--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Ignore environment and config files
 backend/.env
+frontend/.env
 
 # Node.js dependencies
 node_modules
-dist
 frontend/node_modules
 backend/node_modules
 
